done todo list requirement

--- a/src/todo/NewTodoForm.css
+++ b/src/todo/NewTodoForm.css
@@ -1,22 +1,30 @@
 .NewTodoForm {
+  margin-top: 20px;
+}
+.NewTodoForm-form {
   margin-bottom: 10px;
-  background-color: olivedrab;
+  display: flex;
   padding: 10px;
+  flex-direction: column;
+  /* width: 450px; */
 }
 .NewTodoForm-form input {
-  margin-left: 20px;
   margin-right: 5px;
   padding: 10px;
-  border-radius: 3px;
-  width: 200px;
+  width: 300px;
+  border: rgba(106, 142, 35, 0.534) solid 1px;
 }
 form button {
+  background-color: transparent;
+  border: #e1eeff solid 1px;
   padding: 10px;
-  border-radius: 3px;
-  width: 50px;
+  width: 100px;
+  color: white;
+  text-transform: uppercase;
 }
 form label {
   color: white;
-  font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize;
+  font-size: 0.8em;
+  margin-bottom: 0.5em;
 }
